--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,8 @@
 [deps]
+Gogeta = "8b0c908c-0e18-4590-8d3d-9c2483fd76bf"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
